SONAR-5845 Fix overlap of issue message and issue line number

--- a/server/sonar-web/src/main/less/components/issues.less
+++ b/server/sonar-web/src/main/less/components/issues.less
@@ -36,7 +36,7 @@
 
 .issue-message {
   padding-left: @leftPadding;
-  padding-right: @rightPadding;
+  padding-right: 40px + @rightPadding;
   line-height: 1.5;
   font-size: @baseFontSize;
   font-weight: 500;
